# clownbot

./: .dockerignore  .gitignore  15.0fcd0014.js  17896441.5c3b69ed.js  1be78505.6edd6c59.js  3b8c55ea.7b190394.js  404.html  5757263f.2d701e1a.js  935f2afb.ae02ffb1.js  983ae482.1050d6e1.js  Dockerfile  README.md  a02b7ec7.322bb96b.js  a02b7ec7.7d5fa86b.js  a02b7ec7.ba290139.js  a09c2993.d33f7538.js  a6aa9e1f.de7c8fb1.js  b13de27b.5c2e12d9.js  b13de27b.bb91e6ec.js  b13de27b.be7073e6.js  c4f5d8e4.60106e4c.js  c4f5d8e4.66482a8a.js  ccc49370.1479729c.js  ccc49370.83469898.js  common.ca4ddae6.js  e7d0e3af.dde5e1d4.js  entrypoint.sh  index.html  main.15d24529.js  main.da91cca0.js  main.e0507b9d.js  runtime~main.2872c11e.js  runtime~main.429bcd2c.js  runtime~main.9df3c758.js  runtime~main.da2bb3d9.js  sitemap.xml  styles.82c59da9.js
.github/workflows/: ci.yml  documentation.yml
assets/js/: 09f9a52c.1acfe7ad.js  17896441.6c364807.js  17896441.aabfb4cd.js  1be78505.47612082.js  1be78505.be267812.js  3b8c55ea.2ec04db2.js  3b8c55ea.f445742a.js  5757263f.1daeca1e.js  608.33b3b755.js  608.6226e55a.js  935f2afb.93f1774e.js  a02b7ec7.f930bf2c.js  a02b7ec7.fd6b13d0.js  a09c2993.12e1f413.js  a09c2993.b9da0888.js  a6aa9e1f.08d3ce9f.js  a6aa9e1f.c85393fc.js  b13de27b.103d81fc.js  b13de27b.9bc4c490.js  c4f5d8e4.1f2002bd.js  ccc49370.2c22b0a0.js  ccc49370.c2b920f9.js  common.7632d336.js  common.95fb51a9.js  main.51bfdc56.js  main.a805163a.js  runtime~main.22bc7103.js  runtime~main.6636023a.js
blog/: atom.xml  index.html  rss.xml
blog/2020/05/10/testing-setup/: index.html
blog/testing-setup/: index.html
blog/welcome/: index.html
clownbot/: CMakeLists.txt  package.xml
clownbot_common/: CMakeLists.txt  clownbot-common.asd  package.xml
clownbot_common/cmake/: clownbot-extras.cmake.em
clownbot_common/scripts/: make_lisp_script
clownbot_common/testing/: core.lisp  package.lisp
clownbot_common/testing/adapters/: all.lisp  lisp-unit.lisp
clownbot_description/: CMakeLists.txt  package.xml
clownbot_description/config/: urdf.rviz
clownbot_description/launch/: robot_state.launch  view_robot.launch
clownbot_description/urdf/: clownbot.xacro  common.xacro
clownbot_description/urdf/base/: base.xacro
clownbot_description/urdf/wheels/: caster.xacro  wheel.xacro
clownbot_gazebo/: CMakeLists.txt  package.xml
clownbot_gazebo/launch/: simulation.launch
clownbot_gazebo/worlds/: empty.world
clownbot_math/: CMakeLists.txt  clownbot-math-tests.asd  clownbot-math.asd  package.xml
clownbot_math/src/: package.lisp  vector.lisp
clownbot_math/tests/: package.lisp  vector.lisp
clownbot_navigation/: CMakeLists.txt  clownbot-navigation-tests.asd  clownbot-navigation.asd  package.xml
clownbot_navigation/launch/: test_local_planner.launch
clownbot_navigation/rviz/: default.rviz
clownbot_navigation/src/: navigator-node.lisp  package.lisp  planner.lisp  pure-pursuit.lisp  ros.lisp  utils.lisp
clownbot_navigation/tests/: package.lisp
docs/: index.html
docs/installation/: index.html
website/: docusaurus.config.js  package.json  sidebars.js
website/blog/: 2020-05-10-testing-setup.md
website/src/pages/: index.js
