<?xml version="1.0"?>
<package format="2">
  <name>clownbot</name>
  <version>0.0.0</version>
  <description>The clownbot package</description>

  <maintainer email="wty.andrew@gmail.com">Andrew</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>clownbot_common</exec_depend>
  <exec_depend>clownbot_description</exec_depend>

  <export>
    <metapackage/>
  </export>
</package>
