<?xml version="1.0"?>
<package format="2">
  <name>clownbot_common</name>
  <version>0.0.0</version>
  <description>The clownbot_common package</description>

  <maintainer email="wty.andrew@gmail.com">Andrew</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslisp</build_depend>
  <build_export_depend>roslisp</build_export_depend>
  <exec_depend>roslisp</exec_depend>
</package>
