<?xml version="1.0"?>
<package format="2">
  <name>clownbot_math</name>
  <version>0.0.0</version>
  <description>The clownbot_math package</description>

  <maintainer email="wty.andrew@gmail.com">Andrew</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>clownbot_common</build_depend>
  <build_export_depend>clownbot_common</build_export_depend>
  <exec_depend>clownbot_common</exec_depend>
</package>
